--- a/TTD/index.html
+++ b/TTD/index.html
@@ -2,10 +2,15 @@
 <head>
 <title>TTD</title>
 </head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/ b libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-
+<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://pranavi1-1.github.io/TTD.github.io/css/bootstrap.min.css">
+ 
+</head>
+<body>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+</head>
 
 
 
